paper1/tests/ui/external_consume_call.stderr
error[E0624]: method `consume` is private
 --> tests/ui/external_consume_call.rs:9:23
  |
9 |     let _hash = token.consume(); // expected compile error: method is private
  |                       ^^^^^^^ private method
  |
 ::: src/lib.rs
  |
  |     pub(crate) fn consume(self) -> Blake3Hash {
  |     ----------------------------------------- private method defined here
